Added navigation buttons

--- a/cat.html
+++ b/cat.html
@@ -5,16 +5,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cats</title>
-  <link rel="stylesheet" type="text/css" href="reset.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-  <ul>
-    <li><a href="index.html">Resume</a></li>
-    <li><a href="cats.html">Cats</a></li>
-    <li><a href="trees.html">Trees</a></li>
+  <ul class="nav">
+    <li><a href="index.html" class="button">Resume</a></li>
+    <li><a href="cat.html" class="button">Cats</a></li>
+    <li><a href="trees.html" class="button">Trees</a></li>
   </ul>
+  
+  <div class="contentWrapper">
   <h1>Cats</h1>
   <p>I love cat's. This page talks about cats I find interesting with facts and guide on how to identify them.</p>
 
@@ -54,6 +56,7 @@
   <h2>Calico Sphynx cat</h2>
   <img src="images/calico_sphynx.jpg" alt="Calico Sphynx cat sitting weidly on a blue background">
   </section>
+  </div>
 
 </body>
 
