--- a/trees.html
+++ b/trees.html
@@ -5,16 +5,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Trees</title>
-  <link rel="stylesheet" type="text/css" href="reset.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-  <ul>
-    <li><a href="index.html">Resume</a></li>
-    <li><a href="cat.html">Cats</a></li>
-    <li><a href="trees.html">Trees</a></li>
+  <ul class="nav">
+    <li><a href="index.html" class="button">Resume</a></li>
+    <li><a href="cat.html" class="button">Cats</a></li>
+    <li><a href="trees.html" class="button">Trees</a></li>
   </ul>
+  
+  <div class="contentWrapper">
   <h1>Bonsai</h1>
   <p>Below are some pictures I took in the Chicago Botanic Garden recently. </p>
 
@@ -69,6 +71,7 @@
   <img src="images/juniper_bonsai.jpg" alt="juniper bonsai tree from chicago botanical graden">
   <img src="images/second_juniper_bonsai.jpg" alt="a second juniper bonsai tree from chicago botanical graden">	
   </section>
+  </div>
 
 </body>
 
