--- a/index.html
+++ b/index.html
@@ -5,57 +5,60 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Resume</title>
-  <link rel="stylesheet" type="text/css" href="reset.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-  <ul>
-    <li><a href="index.html">Resume</a></li>
-    <li><a href="cat.html">Cats</a></li>
-    <li><a href="trees.html">Trees</a></li>
+  <ul class="nav">
+    <li><a href="index.html" class="button">Resume</a></li>
+    <li><a href="cat.html" class="button">Cats</a></li>
+    <li><a href="trees.html" class="button">Trees</a></li>
   </ul>
-  <h1>Hailie Jade Juliano</h1>
-  <h5>Chicago, IL 60656 | 773-499-9322 | hailiejadejuliano@gmail.com | <a href="https://www.linkedin.com/in/hailie-jade-juliano-187ab3245/">https://www.linkedin.com/in/hailie-jade-juliano-187ab3245/</a></h5>
+  
+  <div class="contentWrapper">
+    <h1>Hailie Jade Juliano</h1>
+    <h5>Chicago, IL 60656 | 773-499-9322 | hailiejadejuliano@gmail.com | <a href="https://www.linkedin.com/in/hailie-jade-juliano-187ab3245/">https://www.linkedin.com/in/hailie-jade-juliano-187ab3245/</a></h5>
 
-  <section>
-  <h2>SUMMARY</h2>
-  <p>Enthusiastic and detail-oriented Information Technology and Management student at Illinois Institute of Technology looking for internships. Knowledgeable in network support, troubleshooting Operating Systems and creating UML diagrams. Experience working in a software development team and managing inventory, with strong problem-solving skills.</p>
-  </section>
+    <section>
+    <h2>SUMMARY</h2>
+    <p>Enthusiastic and detail-oriented Information Technology and Management student at Illinois Institute of Technology looking for internships. Knowledgeable in network support, troubleshooting Operating Systems and creating UML diagrams. Experience working in a software development team and managing inventory, with strong problem-solving skills.</p>
+    </section>
 
-  <section>
-  <h2>EDUCATION</h2>
-  <p>Illinois Institute of Technology, Chicago, IL						          May 2027</p>
-  <p>Bachelor of Information Technology and Management, GPA: 3.5</p>
-  </section>
+    <section>
+    <h2>EDUCATION</h2>
+    <p>Illinois Institute of Technology, Chicago, IL						          May 2027</p>
+    <p>Bachelor of Information Technology and Management, GPA: 3.5</p>
+    </section>
 
-  <section>
-  <h2>SKILLS</h2>
-  <ul>
-    <li>Technology: VS Code, Adobe Photoshop, Adobe Illustrator</li>
-    <li>Programming Languages: Java, Python</li>
-  </ul>
-  </section>
+    <section>
+    <h2>SKILLS</h2>
+    <ul>
+      <li>Technology: VS Code, Adobe Photoshop, Adobe Illustrator</li>
+      <li>Programming Languages: Java, Python</li>
+    </ul>
+    </section>
 
-  <section>
-  <h2>EXPERIENCE</h2>
-  <h4>Information Technology & Management Organization</h4>
-  <p>Illinois Institute of Technology, Chicago, IL					 August 2023 - Present</p>
-  <ul><li>Disassembled laptops and hard drives; assembled and soldered radios.</li></ul>
-  <h4>Girls Who Code</h4>
-  <p>Summer Immersion Program, Chicago, IL						           July 2022</p>
-  <ul><li>Acquired skills in coding and website development with practical applications.</li></ul>
-  <h4>After School Matters</h4>
-  <p>App Development, Chicago, IL	 	    					              June - July 2020</p>
-  <ul><li>Collaborated in a team to develop an application, designed and conceptualized mockup Software.</li></ul>
-  <h2>VOLUNTEER EXPERIENCE</h2>
-  <h4>PSAT/SAT Volunteer</h4>
-  <p>William Howard Taft Highschool, Chicago, IL				        October 2022- March 2023</p>
-  <ul><li>Managed supplies and inventory for 150 seats to ensure adequate seating for students.</li></ul>
-  <h4>Tutor</h4>
-  <p>Junior Achievement Volunteer, Chicago, IL				December 2022 – January 2023</p>
-  <ul><li>Designed and led engaging activities for elementary school students with a team.</li></ul>
-  </section>
+    <section>
+    <h2>EXPERIENCE</h2>
+    <h4>Information Technology & Management Organization</h4>
+    <p>Illinois Institute of Technology, Chicago, IL					 August 2023 - Present</p>
+    <ul><li>Disassembled laptops and hard drives; assembled and soldered radios.</li></ul>
+    <h4>Girls Who Code</h4>
+    <p>Summer Immersion Program, Chicago, IL						           July 2022</p>
+    <ul><li>Acquired skills in coding and website development with practical applications.</li></ul>
+    <h4>After School Matters</h4>
+    <p>App Development, Chicago, IL	 	    					              June - July 2020</p>
+    <ul><li>Collaborated in a team to develop an application, designed and conceptualized mockup Software.</li></ul>
+    <h2>VOLUNTEER EXPERIENCE</h2>
+    <h4>PSAT/SAT Volunteer</h4>
+    <p>William Howard Taft Highschool, Chicago, IL				        October 2022- March 2023</p>
+    <ul><li>Managed supplies and inventory for 150 seats to ensure adequate seating for students.</li></ul>
+    <h4>Tutor</h4>
+    <p>Junior Achievement Volunteer, Chicago, IL				December 2022 – January 2023</p>
+    <ul><li>Designed and led engaging activities for elementary school students with a team.</li></ul>
+    </section>
+  </div>
 
 </body>
 
