--- a/cat.html
+++ b/cat.html
@@ -10,54 +10,62 @@
 </head>
 
 <body>
-  <ul class="nav">
-    <li><a href="index.html" class="button">Resume</a></li>
-    <li><a href="cat.html" class="button">Cats</a></li>
-    <li><a href="trees.html" class="button">Trees</a></li>
-  </ul>
-  
   <div class="contentWrapper">
-  <h1>Cats</h1>
-  <p>I love cat's. This page talks about cats I find interesting with facts and guide on how to identify them.</p>
+    <section class="header">
+      <ul>
+        <li><a href="index.html" class="button">Resume</a></li>
+        <li><a href="cat.html" class="button">Cats</a></li>
+        <li><a href="trees.html" class="button">Trees</a></li>
+      </ul>
+    </section>
+    
+    <section class="mainContent"> 
+      <h1>Cats</h1>
+      <p>I love cat's. This page talks about cats I find interesting with facts and guide on how to identify them.</p>
 
-  <section>
-  <h2>Tuxedo cat</h2>
-  <p>Tuxedo does not refer to the breed of cats but for the fur pattern. Their bellies, chests and paws are white, while the rest of their body is black, orange or gray. They are largely remembered by ther black and white fur looking like a tuxedo.</p>
-  <img src="images/tuxedo.jpg" alt="Tuxedo cat sitting on a blancket">
-  </section>  
+      <div>
+        <h2>Tuxedo cat</h2>
+        <p>Tuxedo does not refer to the breed of cats but for the fur pattern. Their bellies, chests and paws are white, while the rest of their body is black, orange or gray. They are largely remembered by ther black and white fur looking like a tuxedo.</p>
+        <img src="images/tuxedo.jpg" alt="Tuxedo cat sitting on a blancket">
+      </div>  
 
-  <section>
-  <h2>Calico Cats </h2>
-  <p>The same with the Tuexedoe cat, Calico does not refer to the breed of cat but the fur pattern. They have a three color coat combination of white, black and red/orange. Depending on the culture a Calico can represent money or good luck. Japanese sailors used to bring them to their voyage for good luck. Most Calico cats are female(genetics is related to the x chromosome)</p>
-  <img src="images/calico.jpg" alt="Calico cat sitting">
-  </section>
+      <div>
+        <h2>Calico Cats </h2>
+        <p>The same with the Tuexedoe cat, Calico does not refer to the breed of cat but the fur pattern. They have a three color coat combination of white, black and red/orange. Depending on the culture a Calico can represent money or good luck. Japanese sailors used to bring them to their voyage for good luck. Most Calico cats are female(genetics is related to the x chromosome)</p>
+        <img src="images/calico.jpg" alt="Calico cat sitting">
+      </div>
 
-  <section>
-  <h2>Tortoies Cat</h2>
-  <p>Cats with a black and orange fur.</p>
-  <img src="images/tortoise.jpg" alt="Torties cat with a blurred image">
-  </section>
+      <div>
+        <h2>Tortoies Cat</h2>
+        <p>Cats with a black and orange fur.</p>
+        <img src="images/tortoise.jpg" alt="Torties cat with a blurred image">
+      </div>
 
-  <section>
-  <h2>Taby Cat</h2>
-  <p>Identified by its M-shaped marking on its forehead, striped by its eyes and across its cheeks. Is considered one of the most common types of cats. Taby refers to the fur pattern.</p>
-  <img src="images/taby.jpg" alt="Taby cat sitting near a window">
-  </section>
+      <div>
+        <h2>Taby Cat</h2>
+        <p>Identified by its M-shaped marking on its forehead, striped by its eyes and across its cheeks. Is considered one of the most common types of cats. Taby refers to the fur pattern.</p>
+        <img src="images/taby.jpg" alt="Taby cat sitting near a window">
+      </div>
 
-  <section>
-  <h2>Sphynx cat</h2>
-  <p>Sphynx are cats with no fur. They don't shed fur because of the lack thereof of fur. They aren't hypoallergenic because they shed dander.</p>
-  <img src="images/sphynx.jpg" alt="Sphynx cat sitting">
-  <p>Here's a video about sphynx cats:<p>
-  <iframe src="https://www.youtube.com/embed/MQZEuxzKgmc?si=OQdC2QgeA6jKrRFO"></iframe>
-  </section>
+      <div>
+        <h2>Sphynx cat</h2>
+        <p>Sphynx are cats with no fur. They don't shed fur because of the lack thereof of fur. They aren't hypoallergenic because they shed dander.</p>
+        <img src="images/sphynx.jpg" alt="Sphynx cat sitting">
+        <p>Here's a video about sphynx cats:<p>
+        <iframe src="https://www.youtube.com/embed/MQZEuxzKgmc?si=OQdC2QgeA6jKrRFO"></iframe>
+      </div>
 
-  <section>
-  <h2>Calico Sphynx cat</h2>
-  <img src="images/calico_sphynx.jpg" alt="Calico Sphynx cat sitting weidly on a blue background">
-  </section>
+      <div>
+        <h2>Calico Sphynx cat</h2>
+        <img src="images/calico_sphynx.jpg" alt="Calico Sphynx cat sitting weidly on a blue background">
+      </div>
+    </section>
+    
+    <section class="footer">
+      <p>Website created by: Hailie Jade Juliano</p>
+      <p>Contact: hjuliano@gmail.com</p>
+    </section>
   </div>
-
 </body>
 
 </html>
