--- a/trees.html
+++ b/trees.html
@@ -10,69 +10,47 @@
 </head>
 
 <body>
-  <ul class="nav">
-    <li><a href="index.html" class="button">Resume</a></li>
-    <li><a href="cat.html" class="button">Cats</a></li>
-    <li><a href="trees.html" class="button">Trees</a></li>
-  </ul>
-  
   <div class="contentWrapper">
-  <h1>Bonsai</h1>
-  <p>Below are some pictures I took in the Chicago Botanic Garden recently. </p>
-
-  <section>
-  <h3>Cedar (Cryptomeria Japonica)</h3>
-  <p>This type of cedar tree is part of the Cypruss family</p>
-  <img src="images/cedar.jpg" alt="cedar bonsai tree from chicago botanical graden">
-  </section>
-
-  <section>
-  <h3>Bald Cypress</h3>
-  <img src="images/bald_cypress.jpg" alt="bald cypress bonsai tree from chicago botanical graden">
-  </section>
-
-  <section>
-  <h3>Hinoki Cypress</h3>
-  <img src="images/hinoki_cypress.jpg" alt="hinoki cypress bonsai tree from chicago botanical graden">
-  </section>
-
-  <section>
-  <h3>Baby Jade</h3>
-  <img src="images/baby_jade.jpg" alt="baby jade bonsai tree from chicago botanical graden">
-  </section>
-
-  <section>
-  <h3>Crape Myrtle</h3>
-  <img src="images/crape_myrtle.jpg" alt="crape myrtle bonsai tree from chicago botanical graden">
-  </section>
-
-  <section>
-  <h3>Cemara Juniperus</h3>
-  <img src="images/cemara_juniperus.jpg" alt="cemara juniperus bonsai tree from chicago botanical graden">
-  </section>
-
-  <section>
-  <h3>Gollum Jade</h3>
-  <img src="images/gollum_jade.jpg" alt="gollum jade bonsai tree from chicago botanical graden">
-  </section>
-
-  <section>
-  <h3>Chinese Elm</h3>
-  <img src="images/chinese_elm.jpg" alt=" chinese elm bonsai tree from chicago botanical graden">
-  </section>
-
-  <section>
-  <h3>Cork Bark Black Pine </h3>
-  <img src="images/cork_bark_black_pine.jpg" alt="cork bark black pine bonsai tree from chicago botanical graden">
-  </section>
-
-  <section>
-  <h3>Junipers</h3>
-  <img src="images/juniper_bonsai.jpg" alt="juniper bonsai tree from chicago botanical graden">
-  <img src="images/second_juniper_bonsai.jpg" alt="a second juniper bonsai tree from chicago botanical graden">	
-  </section>
+    <section class="header">
+      <ul>
+        <li><a href="index.html" class="button">Resume</a></li>
+        <li><a href="cat.html" class="button">Cats</a></li>
+        <li><a href="trees.html" class="button">Trees</a></li>
+      </ul>
+    </section>
+    
+    <section class="mainContent"> 
+      <h1>Bonsai</h1>
+      <p>Below are some pictures I took in the Chicago Botanic Garden recently. </p>
+      <h3>Cedar (Cryptomeria Japonica)</h3>
+      <p>This type of cedar tree is part of the Cypruss family</p>
+      <img src="images/cedar.jpg" alt="cedar bonsai tree from chicago botanical graden">
+      <h3>Bald Cypress</h3>
+      <img src="images/bald_cypress.jpg" alt="bald cypress bonsai tree from chicago botanical graden">
+      <h3>Hinoki Cypress</h3>
+      <img src="images/hinoki_cypress.jpg" alt="hinoki cypress bonsai tree from chicago botanical graden">
+      <h3>Baby Jade</h3>
+      <img src="images/baby_jade.jpg" alt="baby jade bonsai tree from chicago botanical graden">
+      <h3>Crape Myrtle</h3>
+      <img src="images/crape_myrtle.jpg" alt="crape myrtle bonsai tree from chicago botanical graden">
+      <h3>Cemara Juniperus</h3>
+      <img src="images/cemara_juniperus.jpg" alt="cemara juniperus bonsai tree from chicago botanical graden">
+      <h3>Gollum Jade</h3>
+      <img src="images/gollum_jade.jpg" alt="gollum jade bonsai tree from chicago botanical graden">
+      <h3>Chinese Elm</h3>
+      <img src="images/chinese_elm.jpg" alt=" chinese elm bonsai tree from chicago botanical graden">
+      <h3>Cork Bark Black Pine </h3>
+      <img src="images/cork_bark_black_pine.jpg" alt="cork bark black pine bonsai tree from chicago botanical graden">
+      <h3>Junipers</h3>
+      <img src="images/juniper_bonsai.jpg" alt="juniper bonsai tree from chicago botanical graden">
+      <img src="images/second_juniper_bonsai.jpg" alt="a second juniper bonsai tree from chicago botanical graden">	
+    </section>
+    
+    <section class="footer">
+      <p>Website created by: Hailie Jade Juliano</p>
+      <p>Contact: hjuliano@gmail.com</p>
+    </section>
   </div>
-
 </body>
 
 </html>
