initial resume style

--- a/cat.html
+++ b/cat.html
@@ -12,7 +12,7 @@
 <body>
   <div class="contentWrapper">
     <section class="header">
-      <ul>
+      <ul class="nav">
         <li><a href="index.html" class="button">Resume</a></li>
         <li><a href="cat.html" class="button">Cats</a></li>
         <li><a href="trees.html" class="button">Trees</a></li>
