--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
-<body>
+<body id="resume">
   <div class="contentWrapper">
     <section class="header">
-      <ul>
+      <ul class="nav">
         <li><a href="index.html" class="button">Resume</a></li>
         <li><a href="cat.html" class="button">Cats</a></li>
         <li><a href="trees.html" class="button">Trees</a></li>
@@ -23,51 +23,51 @@
       <h1>Hailie Jade Juliano</h1>
       <h5>Chicago, IL 60656 | 773-499-9322 | hailiejadejuliano@gmail.com | <a href="https://www.linkedin.com/in/hailie-jade-juliano-187ab3245/">https://www.linkedin.com/in/hailie-jade-juliano-187ab3245/</a></h5>
 
-      <div>
-        <h2>SUMMARY</h2>
+      <div class="resume_content">
+        <h2 type="button" class="collapsible">SUMMARY</h2>
         <p>Enthusiastic and detail-oriented Information Technology and Management student at Illinois Institute of Technology looking for internships. Knowledgeable in network support, troubleshooting Operating Systems and creating UML diagrams. Experience working in a software development team and managing inventory, with strong problem-solving skills.</p>
       </div>
 
-      <div>
+      <div class="resume_content">
         <h2>EDUCATION</h2>
         <p>Illinois Institute of Technology, Chicago, IL						          May 2027</p>
         <p>Bachelor of Information Technology and Management, GPA: 3.5</p>
       </div>
 
-      <div>
+      <div class="resume_content">
         <h2>SKILLS</h2>
-        <ul>
+        <ul class="resume_list">
           <li>Technology: VS Code, Adobe Photoshop, Adobe Illustrator</li>
           <li>Programming Languages: Java, Python</li>
         </ul>
       </div>
 
-      <div>
+      <div class="resume_content">
         <h2>EXPERIENCE</h2>
         <h4>Information Technology & Management Organization</h4>
         <p>Illinois Institute of Technology, Chicago, IL					 August 2023 - Present</p>
-        <ul>
+        <ul class="resume_list">
           <li>Disassembled laptops and hard drives; assembled and soldered radios.</li>
         </ul>
         <h4>Girls Who Code</h4>
         <p>Summer Immersion Program, Chicago, IL						           July 2022</p>
-        <ul>
+        <ul class="resume_list">
           <li>Acquired skills in coding and website development with practical applications.</li>
         </ul>
         <h4>After School Matters</h4>
         <p>App Development, Chicago, IL	 	    					              June - July 2020</p>
-        <ul>
+        <ul class="resume_list">
           <li>Collaborated in a team to develop an application, designed and conceptualized mockup Software.</li>
         </ul>
         <h2>VOLUNTEER EXPERIENCE</h2>
         <h4>PSAT/SAT Volunteer</h4>
         <p>William Howard Taft Highschool, Chicago, IL				        October 2022- March 2023</p>
-        <ul>
+        <ul class="resume_list">
           <li>Managed supplies and inventory for 150 seats to ensure adequate seating for students.</li>
         </ul>
         <h4>Tutor</h4>
         <p>Junior Achievement Volunteer, Chicago, IL				December 2022 – January 2023</p>
-        <ul>
+        <ul class="resume_list">
           <li>Designed and led engaging activities for elementary school students with a team.</li>
         </ul>
       </div>
