designed trees page and made some changes to footer

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <div class="contentWrapper">
     <section class="header">
       <ul class="nav">
-        <li><a href="index.html" class="button">Resume</a></li>
-        <li><a href="cat.html" class="button">Cats</a></li>
-        <li><a href="trees.html" class="button">Trees</a></li>
+        <li class="button_list"><a href="index.html" class="button">Resume</a></li>
+        <li class="button_list"><a href="cat.html" class="button">Cats</a></li>
+        <li class="button_list"><a href="trees.html" class="button">Trees</a></li>
       </ul>
     </section>
   
@@ -24,7 +24,7 @@
       <h5>Chicago, IL 60656 | 773-499-9322 | hailiejadejuliano@gmail.com | <a href="https://www.linkedin.com/in/hailie-jade-juliano-187ab3245/">https://www.linkedin.com/in/hailie-jade-juliano-187ab3245/</a></h5>
 
       <div class="resume_content">
-        <h2 type="button" class="collapsible">SUMMARY</h2>
+        <h2 type="button">SUMMARY</h2>
         <p>Enthusiastic and detail-oriented Information Technology and Management student at Illinois Institute of Technology looking for internships. Knowledgeable in network support, troubleshooting Operating Systems and creating UML diagrams. Experience working in a software development team and managing inventory, with strong problem-solving skills.</p>
       </div>
 
