listing 5 unique property's

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <h5>Chicago, IL 60656 | 773-499-9322 | hailiejadejuliano@gmail.com | <a href="https://www.linkedin.com/in/hailie-jade-juliano-187ab3245/">https://www.linkedin.com/in/hailie-jade-juliano-187ab3245/</a></h5>
 
       <div class="resume_content">
-        <h2 type="button">SUMMARY</h2>
-        <p>Enthusiastic and detail-oriented Information Technology and Management student at Illinois Institute of Technology looking for internships. Knowledgeable in network support, troubleshooting Operating Systems and creating UML diagrams. Experience working in a software development team and managing inventory, with strong problem-solving skills.</p>
+        <h2>SUMMARY</h2>
+        <p id="ressum_content">Enthusiastic and detail-oriented Information Technology and Management student at Illinois Institute of Technology looking for internships. Knowledgeable in network support, troubleshooting Operating Systems and creating UML diagrams. Experience working in a software development team and managing inventory, with strong problem-solving skills.</p>
       </div>
 
       <div class="resume_content">
