Edited the errors

--- a/cat.html
+++ b/cat.html
@@ -11,13 +11,13 @@
 
 <body id="cat">
   <div class="contentWrapper">
-    <section class="header">
+    <div class="header">
       <ul class="nav">
-        <li><a href="index.html" class="button">Resume</a></li>
-        <li><a href="cat.html" class="button">Cats</a></li>
-        <li><a href="trees.html" class="button">Trees</a></li>
+        <li class="button_list"><a href="index.html" class="button">Resume</a></li>
+        <li class="button_list"><a href="cat.html" class="button">Cats</a></li>
+        <li class="button_list"><a href="trees.html" class="button">Trees</a></li>
       </ul>
-    </section>
+    </div>
     
     <section class="mainContent" id="cat_content"> 
       <div id="cat_intro">
@@ -96,10 +96,10 @@
       </div>
     </section>
     
-    <section class="footer">
+    <div class="footer">
       <p>Website created by: Hailie Jade Juliano</p>
       <p>Contact: hjuliano@gmail.com</p>
-    </section>
+    </div>
   </div>
 </body>
 
