--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body id="resume">
   <div class="contentWrapper">
-    <section class="header">
+    <div class="header">
       <ul class="nav">
         <li class="button_list"><a href="index.html" class="button">Resume</a></li>
         <li class="button_list"><a href="cat.html" class="button">Cats</a></li>
         <li class="button_list"><a href="trees.html" class="button">Trees</a></li>
       </ul>
-    </section>
+    </div>
   
     <section class="mainContent"> 
       <h1>Hailie Jade Juliano</h1>
@@ -73,10 +73,10 @@
       </div>
     </section>
     
-    <section class="footer">
+    <div class="footer">
       <p>Website created by: Hailie Jade Juliano</p>
       <p>Contact: hjuliano@gmail.com</p>
-    </section>
+    </div>
   </div>
 </body>
 
