--- a/trees.html
+++ b/trees.html
@@ -15,13 +15,13 @@
 
 <body>
   <div id="trees" class="contentWrapper">
-    <section class="header">
+    <div class="header">
       <ul class="nav">
-        <li><a href="index.html" class="button">Resume</a></li>
-        <li><a href="cat.html" class="button">Cats</a></li>
-        <li><a href="trees.html" class="button">Trees</a></li>
+        <li class="button_list"><a href="index.html" class="button">Resume</a></li>
+        <li class="button_list"><a href="cat.html" class="button">Cats</a></li>
+        <li class="button_list"><a href="trees.html" class="button">Trees</a></li>
       </ul>
-    </section>
+    </div>
     
     <section id="trees_content" class="mainContent">
       <h1>Bonsai</h1>
@@ -70,10 +70,10 @@
       </section>
     </section>
     
-  <section class="footer">
-    <p>Website created by: Hailie Jade Juliano</p>
-    <p>Contact: hjuliano@gmail.com</p>
-  </section>
+  <div class="footer">
+      <p>Website created by: Hailie Jade Juliano</p>
+      <p>Contact: hjuliano@gmail.com</p>
+  </div>
 </div>
 </body>
 
