--- a/index.html
+++ b/index.html
@@ -10,30 +10,27 @@
 </head>
 
 <body id="resume">
-  <div class="contentWrapper">
-    <div class="header">
+  <section class="contentWrapper">
+    <section class="header">
       <ul class="nav">
         <li class="button_list"><a href="index.html" class="button">Resume</a></li>
         <li class="button_list"><a href="cat.html" class="button">Cats</a></li>
         <li class="button_list"><a href="trees.html" class="button">Trees</a></li>
       </ul>
-    </div>
-  
-    <section class="mainContent"> 
+    </section>
+
+    <section class="mainContent">
       <h1>Hailie Jade Juliano</h1>
       <h5>Chicago, IL 60656 | 773-499-9322 | hailiejadejuliano@gmail.com | <a href="https://www.linkedin.com/in/hailie-jade-juliano-187ab3245/">https://www.linkedin.com/in/hailie-jade-juliano-187ab3245/</a></h5>
-
       <div class="resume_content">
         <h2>SUMMARY</h2>
         <p id="ressum_content">Enthusiastic and detail-oriented Information Technology and Management student at Illinois Institute of Technology looking for internships. Knowledgeable in network support, troubleshooting Operating Systems and creating UML diagrams. Experience working in a software development team and managing inventory, with strong problem-solving skills.</p>
       </div>
-
       <div class="resume_content">
         <h2>EDUCATION</h2>
         <p>Illinois Institute of Technology, Chicago, IL						          May 2027</p>
         <p>Bachelor of Information Technology and Management, GPA: 3.5</p>
       </div>
-
       <div class="resume_content">
         <h2>SKILLS</h2>
         <ul class="resume_list">
@@ -41,7 +38,6 @@
           <li>Programming Languages: Java, Python</li>
         </ul>
       </div>
-
       <div class="resume_content">
         <h2>EXPERIENCE</h2>
         <h4>Information Technology & Management Organization</h4>
@@ -72,12 +68,14 @@
         </ul>
       </div>
     </section>
-    
-    <div class="footer">
+
+    <section class="footer">
       <p>Website created by: Hailie Jade Juliano</p>
       <p>Contact: hjuliano@gmail.com</p>
-    </div>
-  </div>
+    </section>
+
+  </section>
+
 </body>
 
 </html>
