--- a/trees.html
+++ b/trees.html
@@ -13,15 +13,14 @@
 </head>
 
 <body>
-  <section id="trees" class="contentWrapper">
-
-    <section class="header">
+  <div id="trees" class="contentWrapper">
+    <div class="header">
       <ul class="nav">
         <li class="button_list"><a href="index.html" class="button">Resume</a></li>
         <li class="button_list"><a href="cat.html" class="button">Cats</a></li>
         <li class="button_list"><a href="trees.html" class="button">Trees</a></li>
       </ul>
-    </section>
+    </div>
 
     <section id="trees_content" class="mainContent">
       <h1>Bonsai</h1>
@@ -70,13 +69,11 @@
       </div>
     </section>
 
-    <section class="footer">
+    <div class="footer">
         <p>Website created by: Hailie Jade Juliano</p>
         <p>Contact: hjuliano@gmail.com</p>
-    </section>
-
-  </section>
-  
+    </div>
+  </div>
 </body>
 
 </html>
