--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body id="resume">
-  <section class="contentWrapper">
-    <section class="header">
+  <div class="contentWrapper">
+    <div class="header">
       <ul class="nav">
         <li class="button_list"><a href="index.html" class="button">Resume</a></li>
         <li class="button_list"><a href="cat.html" class="button">Cats</a></li>
         <li class="button_list"><a href="trees.html" class="button">Trees</a></li>
       </ul>
-    </section>
+    </div>
 
     <section class="mainContent">
       <h1>Hailie Jade Juliano</h1>
@@ -69,12 +69,11 @@
       </div>
     </section>
 
-    <section class="footer">
+    <div class="footer">
       <p>Website created by: Hailie Jade Juliano</p>
       <p>Contact: hjuliano@gmail.com</p>
-    </section>
-
-  </section>
+    </div>
+  </div>
 
 </body>
 
